style(emul-15): fixed spacing for footer heading

--- a/src/components/organisms/site/Footer/footer.module.css
+++ b/src/components/organisms/site/Footer/footer.module.css
@@ -21,6 +21,10 @@
   height: auto;
 }
 
+.footerHeading {
+  margin-bottom: var(--space-l);
+}
+
 .footerHeading a {
   font-weight: 700;
 }
